# ProjectoAniku/src/routes/index.js
@@ -1,4 +1,5 @@
 const express = require('express');
+const authController = require('../controllers/login');
 
 const { rootController } = require('../controllers');
 const usuarioRouter = require('./usuario');
@@ -9,5 +10,6 @@ const router = express.Router();
 router.post('/', rootController);
 router.use('/usuarios', usuarioRouter);
 router.use('/fotos', express.static('fotos'), fotosRouter);
+router.post('/login', authController.login);
 
 module.exports = router;
